# PoseSolver

./: Readme.md
HandSolver/: HandSolver.vcxproj  HandSolver.vcxproj.filters
HandSolver/Host/: Host.cpp  Host.vcxproj
HandSolver/PoseSolver/: DenavitHartenberg.h  Hand1.h  Imu.h  Pose.h  PoseSolver.vcxproj  PoseSolver.vcxproj.filters  Unity.h  dllmain.cpp
HandSolver/UnitTests/: UnitTests.vcxproj  denavitHartenberg.cpp  hand.cpp  imu.cpp  pose.cpp  rodrigues.cpp  (+1 more)
Matlab/: addpaths.m  print_stream_correlations.m
Models/: MH.blend  MH.blend1  MH.fbx
PoseSolver/: CMakeLists.txt  PoseSolver.sln  PoseSolver.vcxproj
PoseSolver/PoseSolver/: DenavitHartenberg.h  Export.h  Hand1.cpp  Hand1.h  Hand2.cpp  Hand2.h  Hand3.cpp  Hand3.h  Hand5.cpp  Hand5.h  Imu.cpp  Imu.h  Joints.h  Motion.h  PointMeasurement.h  PoseSolver.vcxproj  PoseSolver.vcxproj.filters  Transforms.h  Unity.h  dllmain.cpp  pch.h
PoseSolver/ThirdPartyTests/: CMakeLists.txt  ceres_jacobian_test.cpp
PoseSolver/UnitTests/: CMakeLists.txt  MockImu.h  UnitTests.vcxproj  denavitHartenberg.cpp  imu.cpp  mockImu.cpp  pose.cpp  rodrigues.cpp  test.cpp
PoseSolver/UnitTests/trajectories/: trajectory1.csv
PoseSolver/ceres/: .gitignore
PoseSolver/ceres/debug/lib/: ceres-debug.lib  gflags_debug.lib
PoseSolver/ceres/debug/lib/pkgconfig/: libglog.pc
PoseSolver/ceres/include/ceres/internal/: config.h
PoseSolver/ceres/lib/: glog.lib
PoseSolver/ceres/lib/pkgconfig/: libglog.pc
PoseSolver/ceres/share/ceres/: CeresTargets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
PoseSolver/ceres/share/eigen3/: vcpkg_abi_info.txt
PoseSolver/ceres/share/gflags/: gflags-nonamespace-targets.cmake  gflags-targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
PoseSolver/ceres/share/glog/: glog-targets.cmake  vcpkg.spdx.json  vcpkg_abi_info.txt
PoseSolver/ceres/share/vcpkg-cmake/: vcpkg.spdx.json  vcpkg_abi_info.txt
PoseSolver/ceres/share/vcpkg-cmake-config/: vcpkg.spdx.json  vcpkg_abi_info.txt
TrackerManager/: TrackerManager.sln
Unit Test Trajectories/: Text  Trajectory1.blend  Trajectory1.blend1
Unity/: .gitignore
(+162 files in other folders)
